# PerformApp

./: .env  .gitignore  README.md  dev.mk  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.production.yml  local.mk  makefile  package-lock.json  package.json  prod.mk
backend/: Dockerfile.dev  Dockerfile.prod  db.sqlite3  entrypoint.dev.sh  entrypoint.local.sh  manage.py  pyproject.toml  requirements.txt
backend/backend/: group.py  settings.py  urls.py
backend/exercise/: adminviews.py  models.py  serializers.py  views.py
backend/exercise/migrations/: 0001_initial.py  0002_alter_exercisematerial_exercise_and_more.py  0002_initial.py  0003_alter_exercisesport_exercise_and_more.py  0003_exercise_created_at_exercise_updated_at_and_more.py  0003_remove_exercise_description.py  0004_alter_exercisematerial_exercise_and_more.py  0004_exercise_thumbnail.py  0005_alter_exercise_name_alter_material_name.py  0005_remove_material_description_exercise_materials_and_more.py  0006_exercisestep_order.py  0006_workzone_code.py  0007_remove_workzone_id_alter_workzone_code.py  0008_alter_exercisezone_exercise.py  0009_exercise_zone.py  0010_rename_zone_exercise_muscles.py
backend/program/: models.py  serializers.py  views.py
backend/sport/: admin.py  admin_views.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/users2/: admin.py  login_view.py  managers.py  models.py  permissions.py  register_view.py  serializers.py  views.py
backend/utils/: utils.py
backend/viewer/: apps.py  models.py  serializers.py  views.py
config/: .env.dev  (+2 more)
(+345 files in other folders)
